fixes spacing for footer

--- a/react-travel-journal/src/index.css
+++ b/react-travel-journal/src/index.css
@@ -217,6 +217,10 @@ Classes
   z-index: 40;
 }
 
+.footer-image {
+  padding-left: 6em;
+}
+
 .gadabout {
   color: #c4745a;
   float: left;
